--- a/stagingg.html
+++ b/stagingg.html
@@ -207,8 +207,7 @@ I8,      ,8'
 	<li><a href="cgol">Conway's Game of Life</a> <span class="smoldate">2018</span></li>
 	<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software</a> <span class="smoldate">2018</span></li>
 	<li><a href="#">cecil letter archive project</a> <span class="smoldate">2018</span></li>
-	<li><a href="#">50 states game</a> <span class="smoldate">2018</span></li>
-	<li><a href="#">u mich german resources</a> <span class="smoldate">2018</span></li>
+	<li><a href="/50states.html">50 states game</a> <span class="smoldate">2018</span></li>
 
 
 							
