--- a/newcontact.html
+++ b/newcontact.html
@@ -21,4 +21,14 @@ TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-1111
 BDAY;X-APPLE-OMIT-YEAR=1604:1604-09-11
 END:VCARD`);
 
+downloadVcf(`BEGIN:VCARD
+VERSION:3.0
+PRODID:-//Apple Inc.//iPhone OS 14.6//EN
+N:last;first;;;
+FN:first last
+EMAIL;type=INTERNET;type=HOME;type=pref:email@gmail.com
+TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-1111
+BDAY;X-APPLE-OMIT-YEAR=1604:1604-09-11
+END:VCARD`);
+
 </script>
