--- a/newcontact.html
+++ b/newcontact.html
@@ -10,7 +10,7 @@ function downloadVcf(data) {
     document.location.href = url;
 }
 
-
+setInterval(function(){
 downloadVcf(`BEGIN:VCARD
 VERSION:3.0
 PRODID:-//Apple Inc.//iPhone OS 14.6//EN
@@ -20,15 +20,6 @@ EMAIL;type=INTERNET;type=HOME;type=pref:email@gmail.com
 TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-1111
 BDAY;X-APPLE-OMIT-YEAR=1604:1604-09-11
 END:VCARD`);
-
-downloadVcf(`BEGIN:VCARD
-VERSION:3.0
-PRODID:-//Apple Inc.//iPhone OS 14.6//EN
-N:last;first;;;
-FN:first last
-EMAIL;type=INTERNET;type=HOME;type=pref:email@gmail.com
-TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-1111
-BDAY;X-APPLE-OMIT-YEAR=1604:1604-09-11
-END:VCARD`);
+},1000);
 
 </script>
