--- a/newcontact.html
+++ b/newcontact.html
@@ -19,7 +19,7 @@ PRODID:-//Apple Inc.//iPhone OS 14.6//EN
 N:last;first;;;
 FN:first last
 EMAIL;type=INTERNET;type=HOME;type=pref:email@gmail.com
-TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) ` + i + `9
+TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-1111
 BDAY;X-APPLE-OMIT-YEAR=1604:1604-09-11
 END:VCARD`);
 
