--- a/guestbook.html
+++ b/guestbook.html
@@ -3,9 +3,11 @@
         <title>guestbook | jamesunderwood.net</title>
         <style>
         .guestbooklisting {
-            display:inline-block;
-            margin-bottom: 5px;
+margin-left:10%;
+		margin-right:10%;
+		margin-bottom: 5px;
             background: silver;
+		padding:15px;
          }
             
             
