--- a/guestbook.html
+++ b/guestbook.html
@@ -18,7 +18,7 @@ margin-left:10%;
    <center>
     <img src="/assets/guestbook.gif" style="width:200px">
 
-       <h1>~ jamesunderwood.net guestbook ~</h1>
+       <h1>~ guestbook ~</h1>
 				<button onclick="window.open('/guestbookpost.html','name','width=610,height=250')">leave a message</button>       
        <div id="container">
        <div class="guestbooklisting">
