--- a/guestbook.html
+++ b/guestbook.html
@@ -9,6 +9,10 @@ margin-left:10%;
             background: silver;
 		padding:5px;
          }
+		body {
+		background-image: url("/assets/5002.png");
+			            background-attachment: fixed;	
+		}
             
             
         </style>
