--- a/guestbook.html
+++ b/guestbook.html
@@ -2,12 +2,15 @@
     <head>
         <title>guestbook | jamesunderwood.net</title>
         <style>
-        .guestbooklisting {
-margin-left:10%;
-		margin-right:10%;
-		margin-top: 15px;
-            background: silver;
-		padding:5px;
+.guestbooklisting {
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 15px;
+  background: lightblue;
+  padding: 5px;
+  border: 1.5px solid black;
+  border-radius: 4px;
+
          }
 		body {
 		background-image: url("/assets/5002.png");
