--- a/guestbook.html
+++ b/guestbook.html
@@ -60,7 +60,7 @@ var arraylet2 = arraylet.filter(function(value, index, arr){
 
   arraylet2.forEach(function(val, i) {
 
-    $(".post").eq(i).prepend("<small>" + val.split(" ")[0] + "</small><br>");
+    $(".guestbooklisting").eq(i).prepend("<small>" + val.split(" ")[0] + "</small><br>");
   });
 });
 
