--- a/driverslicensetypography.html
+++ b/driverslicensetypography.html
@@ -2,7 +2,7 @@
   <head>
     <style>
       body {
-       background-image: url("/assets/water2.webp");
+       background-image: url("/assets/pastelblue.png");
       }
     </style>
   </head>
