--- a/stagingg.html
+++ b/stagingg.html
@@ -219,6 +219,7 @@ I8,      ,8'
 	
 		
 			<div class="feed" id="guestbook">
+				<img src="/assets/guestbook2.gif">
 				<h3><a href="/guestbook.html">click here to access the guestbook</a></h3>
 				
 				
