--- a/stagingg.html
+++ b/stagingg.html
@@ -15,15 +15,7 @@
 			}
 
 		
-.post {
 
-background:#00173f;
-border-radius:10px;
-margin-top: 10px;
-	margin-left:25%;
-	margin-right:25%;
-
-}
 		
 .feed {
 text-align:center;
@@ -220,7 +212,7 @@ I8,      ,8'
 		
 			<div class="feed" id="guestbook">
 				<img src="/assets/guestbook2.gif">
-				<h3><a href="/guestbook.html">click here to access the guestbook</a></h3>
+				<h3><a href="/guestbook.html">click here to sign the guestbook</a></h3>
 				
 				
 	</div>
