--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -4,7 +4,7 @@
 <style>
 
 body {
-background-image: url("/assets/water.gif.gif");
+background-image: url("/assets/water.gif");
 }
 </style>
 </head>
