--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -5,12 +5,18 @@
 
 body {
 background-image: url("/assets/water.gif");
+  padding:50px;
 }
+  #mainContainer {
+   background: rgba(255,255,255,0.5); 
+    border-radius:25px;
+  }
 </style>
 </head>
 <body>
+  <div id="mainContainer">
 <h1>AutoAnnouncer</h1>
-<h3>AutoAnnouncer is a tool that automatically plays pool rest period announcements.</h3>
-
+<h3>AutoAnnouncer is a tool to automatically play rest period announcements over the PA system.<h3>
+  </div>
 </body>
 </html>
