--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -5,18 +5,26 @@
 
 body {
 background-image: url("/assets/water.gif");
-  padding:50px;
+  padding:45px;
 }
   #mainContainer {
-   background: rgba(255,255,255,0.5); 
+   background: rgba(255,255,255,0.75); 
     border-radius:25px;
+    padding:15px;
   }
 </style>
 </head>
 <body>
   <div id="mainContainer">
 <h1>AutoAnnouncer</h1>
-<h3>AutoAnnouncer is a tool to automatically play rest period announcements over the PA system.<h3>
+<h3>AutoAnnouncer is a tool for pools that automatically plays rest period announcements over the PA system.<h3>
+  
+  <ul>
+    <li><a href="">Download (Windows)</a></li>
+    <li><a href="">Download (MacOS)</a></li>
+    <li><a href="">Source</a></li>
+  </ul>
+  
   </div>
 </body>
 </html>
