--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -22,7 +22,7 @@ background-image: url("/assets/water.gif");
   <ul>
     <li><a href="">Download (Windows)</a></li>
     <li><a href="">Download (MacOS)</a></li>
-    <li><a href="">Source</a></li>
+    <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   
   </div>
