--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ I8,      ,8'
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 			</td>
 		<td>
-							<img src="construction.gif" style="width:160px"></img>
+							<img src="/assets/construction.gif" style="width:160px"></img>
 		<!-- <img width="60px" src="/assets/flag4.gif.gif"></img> -->
 
 			</td>
