--- a/stagingg.html
+++ b/stagingg.html
@@ -136,11 +136,35 @@ I8,      ,8'
 					</tr>
 				</table>
 			
-			<!--<div id="subheader">
-				<p style="margin:0;">
-					<a>old website</a> | <a target="_BLANK" href="/old/campaign1">campaign website #1</a> | <a target="_BLANK" href="/old/campaign2/">campaign website #2</a> | <a target="_BLANK" href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a target="_BLANK" href="https://github.com/junderw00d">github &lt;old&gt;</a> | <a target="_BLANK" href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a>
-				</p>-->
+			
+
+<div style="position:absolute">
+			<img src="/assets/8831/anarchy1.gif">
+			<img src="/assets/8831/anythingbut.gif">
+			<img src="/assets/8831/anythingbutchrome.gif">
+			<img src="/assets/8831/aolim.gif">
+			<img src="/assets/8831/atarilogo.gif">
+			<img src="/assets/8831/bantt.gif">
+			<img src="/assets/8831/chill_pill.gif">
+			<img src="/assets/8831/chrmevil.gif">
+<img src="/assets/8831/copy_floppy.gif">
+	<img src="/assets/8831/discord2.gif">
+	<img src="/assets/8831/firefoxget.gif">
+	<img src="/assets/8831/fspeech.gif">
+	<img src="/assets/8831/halloween1.gif">
+	<img src="/assets/8831/hsajesusveg.gif">
+	<img src="/assets/8831/ieburnbtn.gif">
+	<img src="/assets/8831/ienuke.gif">
+	<img src="/assets/8831/peace.gif">
+	<img src="/assets/8831/steam.gif">
+	<img src="/assets/8831/twig.gif">
+		<img src="/assets/8831/wikipedia.gif">
+
+	
+	
 			</div>
+
+
 			<div class="feed">
 				<h5 class="sectionHeader">
 ~latest~
