--- a/stagingg.html
+++ b/stagingg.html
@@ -16,14 +16,18 @@
 
 		
 
-		
-.feed {
-text-align:center;
+	#feedcont {
+		text-align:center;
   padding:10px;
   line-height:1.5em;
-  background:rgba(0,0,0,0.80);
+
 margin-left:15%;
 margin-right:15%;
+		background-image: url("/assets/beehive.png");
+		
+			}
+.feed {
+
 }
 .latestTag {
   background:#2b2b2b;
@@ -163,7 +167,7 @@ I8,      ,8'
 	
 	
 			</div>
-
+<div id="feedcont">
 
 			<div class="feed">
 				<h5 class="sectionHeader">
@@ -260,7 +264,7 @@ I8,      ,8'
 		
 				</div>
 				
-				
+</div>	
 	
 			
 			
