--- a/stagingg.html
+++ b/stagingg.html
@@ -89,7 +89,14 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			}
 			.bottomButtonTable {
 			}
-		
+		#8831div {
+			 position:absolute;
+			width:15%;
+			text-align:right;
+			}
+			#8831div img {
+			display:block;	
+			}
 	</style>
 	</head>
 	<body>
@@ -142,7 +149,7 @@ I8,      ,8'
 			
 			
 
-<div style="position:absolute">
+<div id="8831div">
 			<img src="/assets/8831/anarchy1.gif">
 			<img src="/assets/8831/anythingbut.gif">
 			<img src="/assets/8831/anythingbutchrome.gif">
