--- a/stagingg.html
+++ b/stagingg.html
@@ -7,7 +7,7 @@
 			background-image: url("/assets/starssss.gif");
 			            background-attachment: fixed;
   padding: 0;
-  color:white !important;
+
   font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
     }
 			body a {
@@ -23,7 +23,7 @@
 
 margin-left:15%;
 margin-right:15%;
-		background-image: url("/assets/beehive.png");
+		background-image: url("/assets/lightblueweave.gif");
 		
 			}
 .feed {
