--- a/stagingg.html
+++ b/stagingg.html
@@ -89,12 +89,12 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			}
 			.bottomButtonTable {
 			}
-		#8831div {
+		#div8831 {
 			 position:absolute;
 			width:15%;
 			text-align:right;
 			}
-			#8831div img {
+			#div8831 img {
 			display:block;	
 			}
 	</style>
@@ -149,7 +149,7 @@ I8,      ,8'
 			
 			
 
-<div id="8831div">
+<div id="div8831">
 			<img src="/assets/8831/anarchy1.gif">
 			<img src="/assets/8831/anythingbut.gif">
 			<img src="/assets/8831/anythingbutchrome.gif">
