--- a/stagingg.html
+++ b/stagingg.html
@@ -11,7 +11,7 @@
   font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
     }
 			body a {
-			color: LightBlue;	
+			color: DarkBlue;	
 			}
 
 		
