--- a/stagingg.html
+++ b/stagingg.html
@@ -93,6 +93,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			 position:absolute;
 			width:15%;
 			text-align:right;
+			right:0;
 			}
 			#div8831 img {
 			display:block;	
@@ -149,6 +150,10 @@ I8,      ,8'
 			
 			
 
+<div id="feedcont">
+	
+	
+	
 <div id="div8831">
 			<img src="/assets/8831/anarchy1.gif">
 			<img src="/assets/8831/anythingbut.gif">
@@ -174,7 +179,7 @@ I8,      ,8'
 	
 	
 			</div>
-<div id="feedcont">
+	
 
 			<div class="feed">
 				<h5 class="sectionHeader">
