--- a/stagingg.html
+++ b/stagingg.html
@@ -175,6 +175,7 @@ I8,      ,8'
 	<img src="/assets/8831/steam.gif">
 	<img src="/assets/8831/twig.gif">
 		<img src="/assets/8831/wikipedia.gif">
+		<img src="/assets/8831/aladdinsane.png">
 
 	
 	
