--- a/stagingg.html
+++ b/stagingg.html
@@ -176,6 +176,7 @@ I8,      ,8'
 	<img src="/assets/8831/twig.gif">
 		<img src="/assets/8831/wikipedia.gif">
 		<img src="/assets/8831/aladdinsane.png">
+		<img src="/assets/8831/blm.png">
 
 	
 	
