--- a/stagingg.html
+++ b/stagingg.html
@@ -213,7 +213,7 @@ I8,      ,8'
 					</li>
 					<li>
 						<span class="latestTag">Blog</span>
-						<a href="yost.html" target="_BLANK">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
+						<a href="/yost/index.html" target="_BLANK">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
 						<span class="smoldate">3/13/2022</span>
 					</li>
 					<!-- <li>
