--- a/stagingg.html
+++ b/stagingg.html
@@ -270,10 +270,9 @@ I8,      ,8'
 ~misc.~
 	</h5>
 		<ul>
-			<li><a href="#">spotify</a></li>
-			<li><a href="#">ig</a></li>
-			<li><a href="#">letterboxd</a></li>
-			<li><a href="#">student journalism</a></li>
+			<li><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=0c08adab55904697">spotify</a></li>
+			<li><a href="https://instagram.com/junderwooood">ig</a></li>
+			<li><a href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></li>
 		</ul>
 		<h5 class="sectionHeader">~contact~</h5>
 		<img src="/assets/emailmegif.gif" style="width:80px">
