--- a/stagingg.html
+++ b/stagingg.html
@@ -212,14 +212,10 @@ I8,      ,8'
 					<!--   <li>
       <a href="https://www.youtube.com/watch?v=XpaBC9w2CeU" target="_BLANK">communications chair speech</a> <span class="smoldate">5/5/22</span>
     </li> -->
-	<li>
-						<span class="latestTag">Blog</span>
-						<a href="yost.html" target="_BLANK">Drivers License Typography by State</a>
-						<span class="smoldate">6/22/2022</span>
-					</li>
+	
 					<li>
 						<span class="latestTag">Blog</span>
-						<a href="/yost/index.html" target="_BLANK">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
+						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
 						<span class="smoldate">3/13/2022</span>
 					</li>
 					<!-- <li>
