--- a/stagingg.html
+++ b/stagingg.html
@@ -269,6 +269,7 @@ I8,      ,8'
 			<li><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=0c08adab55904697">spotify</a></li>
 			<li><a href="https://instagram.com/junderwooood">ig</a></li>
 			<li><a href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></li>
+			<li><a href="https://www.goodreads.com/user/show/153388050-james-u">goodreads</a></li>
 		</ul>
 		<h5 class="sectionHeader">~contact~</h5>
 		<img src="/assets/emailmegif.gif" style="width:80px">
