--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -24,7 +24,8 @@ background-image: url("water.gif");
     <li><a href="">Download (MacOS)</a></li>
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
-  
+  <h3>Demo</h3>
+  				<button onclick="window.open('./demo/AutoAnnouncerDemo1.0.0/index.html','AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0')">leave a message</button>       
   </div>
 </body>
 </html>
