--- a/guestbook.html
+++ b/guestbook.html
@@ -26,7 +26,7 @@
     <img src="/assets/guestbook.gif" style="width:200px">
 
        <h1>~ guestbook ~</h1>
-				<button onclick="window.open('/guestbookpost.html','name','width=610,height=250')">leave a message</button>       
+				<button onclick="window.open('/guestbookpost.html','name','width=610,height=250,resizable=0')">leave a message</button>       
        <div id="container">
      
        </div>
