--- a/stagingg.html
+++ b/stagingg.html
@@ -213,6 +213,13 @@ I8,      ,8'
       <a href="https://www.youtube.com/watch?v=XpaBC9w2CeU" target="_BLANK">communications chair speech</a> <span class="smoldate">5/5/22</span>
     </li> -->
 	
+					
+					<li>
+						<span class="latestTag">Misc.</span>
+						<a href="/autoannouncer">AutoAnnouncer</a>
+						<span class="smoldate">7/1/2022</span>
+					</li>
+					
 					<li>
 						<span class="latestTag">Blog</span>
 						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
