--- a/stagingg.html
+++ b/stagingg.html
@@ -216,7 +216,7 @@ I8,      ,8'
 					
 					<li>
 						<span class="latestTag">Misc.</span>
-						<a href="/autoannouncer">AutoAnnouncer</a>
+						<a href="/autoannouncer">AutoAnnouncer 1.0.0</a>
 						<span class="smoldate">7/1/2022</span>
 					</li>
 					
