--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -20,12 +20,16 @@ background-image: url("water.gif");
 <h3>AutoAnnouncer is a tool for pools that automatically plays rest period announcements over the PA system.<h3>
   
   <ul>
-    <li><a href="">Download (Windows)</a></li>
-    <li><a href="">Download (MacOS)</a></li>
+    <li><a href="">Download 1.0.1 (Windows)</a></li>
+    <li><a href="">Download 1.0.1 (MacOS)</a></li>
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   <h3>Web demo</h3>
   				<button onclick="window.open('./demo/AutoAnnouncerDemo1.0.0/index.html','AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0')">LAUNCH DEMO</button>       
+  <h3>Changelog</h3>
+  <ul>
+    <li><strong>7/14/22: </strong>updated audio recordings to be more "enthusiastic" (per request)</li>
+  </ul>
   </div>
 </body>
 </html>
