--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -16,12 +16,12 @@ background-image: url("water.gif");
 </head>
 <body>
   <div id="mainContainer">
-<h1>AutoAnnouncer</h1>
+    <h1 style="display:inline-block">AutoAnnouncer</h1> <small>v1.0.1</small>
 <h3>AutoAnnouncer is a tool for pools that automatically plays rest period announcements over the PA system.<h3>
   
   <ul>
-    <li><a href="">Download 1.0.1 (Windows)</a></li>
-    <li><a href="">Download 1.0.1 (MacOS)</a></li>
+    <li><a href="">Download v1.0.1 (Windows)</a></li>
+    <li><a href="">Download v1.0.1 (MacOS)</a></li>
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   <h3>Web demo</h3>
