--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -28,7 +28,7 @@ background-image: url("water.gif");
   				<button onclick="window.open('./demo/AutoAnnouncerDemo1.0.0/index.html','AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0')">LAUNCH DEMO</button>       
   <h3>Changelog</h3>
   <ul>
-    <li><strong>7/14/22: </strong>updated audio recordings to be more "enthusiastic" (per request)</li>
+    <li><strong>7/14/22: </strong>v1.0.1&mdash;updated audio recordings to be more "enthusiastic" (per request)</li>
   </ul>
   </div>
 </body>
