--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -16,6 +16,7 @@ background-image: url("water.gif");
 </head>
 <body>
   <div id="mainContainer">
+    <h5><a href="/">return to jamesunderwood.net</a></h5>
     <h1 style="display:inline-block">AutoAnnouncer</h1> <small>v1.0.1</small>
 <h3>AutoAnnouncer is a tool for pools that automatically plays rest period announcements over the PA system.<h3>
   
