--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -26,7 +26,13 @@ background-image: url("water.gif");
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   <h3>Web demo</h3>
-  				<button onclick="window.open('./demo/AutoAnnouncerDemo1.0.0/index.html','AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0')">LAUNCH DEMO</button>       
+  			
+  
+  <select id="demoVersionSelect">
+  <option value="101" selected>v1.0.1</option>
+  <option value="100">v1.0.0</option>
+</select>
+  <button onclick="window.open('./demo/AutoAnnouncerDemo1.0.0/index.html','AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0')">LAUNCH DEMO</button>       
   <h3>Changelog</h3>
   <ul>
     <li><strong>7/14/22: </strong>v1.0.1&mdash;updated audio recordings to be more "enthusiastic" (per request)</li>
