--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -16,7 +16,7 @@ background-image: url("water.gif");
 </head>
 <body>
   <div id="mainContainer">
-    <h5 style="margin:0"><a href="/">return to jamesunderwood.net</a></h5>
+    <h5 style="margin:0"><i><a href="/">return to jamesunderwood.net</a></i></h5>
     <h1 style="display:inline-block;margin:0;margin-top:10px;">AutoAnnouncer</h1> <small>v1.0.1</small>
 <h3>AutoAnnouncer is a tool for pools that automatically plays rest period announcements over the PA system.<h3>
   
