--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -21,8 +21,8 @@ background-image: url("water.gif");
 <h3>AutoAnnouncer is a tool for pools that automatically plays rest period announcements over the PA system.<h3>
   
   <ul>
-    <li><a href="">Download v1.0.1 (Windows)</a></li>
-    <li><a href="">Download v1.0.1 (MacOS)</a></li>
+    <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer/releases/download/v1.0.1/AutoAnnouncer-win32-ia32.zip">Download v1.0.1 (Windows)</a></li>
+    <li>Download v1.0.1 (MacOS) <small>COMING SOON</small></li>
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   <h3>Web demo</h3>
