--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -41,7 +41,7 @@ background-image: url("water.gif");
   </div>
   <script>
     document.getElementById('launchDemo').onclick = function(){
-      window.open('./demo/AutoAnnouncerDemo${document.getElementById("demoVersionSelect").value}/index.html','AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0');
+      window.open(`./demo/AutoAnnouncerDemo${document.getElementById("demoVersionSelect").value}/index.html`,'AutoAnnouncer Demo','width=650,height=300,menubar=1,resizable=0');
     };
     
   </script>
