--- a/autoannouncer/demo/AutoAnnouncerDemo1.0.1/index.html
+++ b/autoannouncer/demo/AutoAnnouncerDemo1.0.1/index.html
@@ -31,9 +31,9 @@
      <div id="allContainer" class="aaOn">
 <div id="allContainerCover">
 
-    <h1>
+    <h1 style="display:inline-block">
       RRWP AutoAnnouncer
-    </h1>
+    </h1> <small>DEMO</small>
 
 
 <table style="margin-top:25px;">
