--- a/autoannouncer/demo/AutoAnnouncerDemo1.0.0/index.html
+++ b/autoannouncer/demo/AutoAnnouncerDemo1.0.0/index.html
@@ -57,7 +57,7 @@
       
 
       <div id="bottomRight">
-      <p><small>RRWP AutoAnnouncer</small></p>
+      <p><small>RRWP AutoAnnouncer v1.0.0</small></p>
             <p><small>&copy; James Underwood 2022</small></p>
 
       </div>
