--- a/stagingg.html
+++ b/stagingg.html
@@ -213,10 +213,14 @@ I8,      ,8'
       <a href="https://www.youtube.com/watch?v=XpaBC9w2CeU" target="_BLANK">communications chair speech</a> <span class="smoldate">5/5/22</span>
     </li> -->
 	
-					
+					<li>
+						<span class="latestTag">Blog</span>
+						<a href="/statesupremecourts/index.html">Names of US State Supreme Courts</a>
+						<span class="smoldate">7/16/2022</span>
+					</li>
 					<li>
 						<span class="latestTag">Misc.</span>
-						<a href="/autoannouncer">AutoAnnouncer 1.0.0</a>
+						<a href="/autoannouncer">AutoAnnouncer 1.0.1</a>
 						<span class="smoldate">7/1/2022</span>
 					</li>
 					
