--- a/stagingg.html
+++ b/stagingg.html
@@ -220,7 +220,7 @@ I8,      ,8'
 					</li>
 					<li>
 						<span class="latestTag">Misc.</span>
-						<a href="/autoannouncer">AutoAnnouncer 1.0.1</a>
+						<a href="/autoannouncer">AutoAnnouncer v1.0.1</a>
 						<span class="smoldate">7/1/2022</span>
 					</li>
 					
