--- a/statesupremecourts/index.html
+++ b/statesupremecourts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-    <h1 style="display:inline-block">Names of US State Supreme Courts</h1> <h4>James Underwood &bull; 7/15/2022</h4>
+    <h1 style="display:inline-block">Names of US State Supreme Courts</h1> <h4 style="display:inline-block">James Underwood &bull; 7/15/2022</h4>
   <img src="map.png">
   </body>
 </html>
