--- a/statesupremecourts/index.html
+++ b/statesupremecourts/index.html
@@ -3,5 +3,6 @@
   <body>
     <h1 style="display:inline-block">Names of US State Supreme Courts</h1> <h4 style="display:inline-block">James Underwood &bull; 7/15/2022</h4>
   <img src="map.png">
+    <p><i>[X] = state</i></p>
   </body>
 </html>
