--- a/cecilarchive/index.html
+++ b/cecilarchive/index.html
@@ -1,3 +1,16 @@
+<div style="background:gray;margin:25px;border:5px solid black;">
+	<h3>This project, started in 2018, has been discontinued. The site is available here for archival purposes, but scanned letters are not accessible.</h3>
+	<ul>
+		<li><a href="/cecilarchive">view home page</a></li>
+		<li><a href="/cecilarchive/dashboard.html">view dashboard</a></li>
+		<li><a href="/cecilarchive">view home page</a></li>
+
+
+	</ul>
+	
+</div>
+
+
 <!--
 <?php
 session_start();
