--- a/cecilarchive/dashboard.html
+++ b/cecilarchive/dashboard.html
@@ -138,7 +138,7 @@ if ($_SESSION["admin"] == "1") {
 	</div>
 
 
-<div id="special" class="nicediv" style="display:none;width:40%;background:white;color:black;font-family:verdana;">
+<div id="special" class="nicediv" style="width:40%;background:white;color:black;font-family:verdana;">
 <h3 style="margin:0px">Project Updates & News</h3>
 <hr>
 <!--<?php
@@ -156,8 +156,8 @@ while($result = $query->fetch_assoc()) {
 <?php
 }
 ?>
-*/
-</div>-->
+-->
+</div>
 
 
 
