--- a/cecilarchive/christmas.html
+++ b/cecilarchive/christmas.html
@@ -24,7 +24,7 @@ color:white;
 <h1><span><img src="graphics/christmastree.gif" width="50px" style="vertical-align:middle"></span>Merry Christmas!<span><img src="graphics/christmastree.gif" width="50px" style="vertical-align:middle"></span></h1>
 <h3>Check out this letter from Earl Cecil to his brother Lester dated December 29, 1918:</h3>
 <img src="Christmas1918.jpeg" width="350px">
-<h4><a href="view.php?id=c7592ab0" style="color:white">See the file page for a transcript.</a></h4>
+<h4><a href="view.html?id=c7592ab0" style="color:white">See the file page for a transcript.</a></h4>
 <script src="snowstorm.js"></script>
 <script>
 snowStorm.flakesMaxActive = 64;    // show more snow on screen at once
