--- a/statesupremecourts/index.html
+++ b/statesupremecourts/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <h1 style="display:inline-block">Names of US State Supreme Courts</h1> <h4 style="display:inline-block">James Underwood &bull; 7/15/2022</h4>
+    <h3>What is the name of the highest court by state?</h3>
   <img src="map.png">
     <p><i>[X] = state</i></p>
   </body>
