--- a/stagingg.html
+++ b/stagingg.html
@@ -160,27 +160,37 @@ I8,      ,8'
 	
 <div id="div8831">
 			<img src="/assets/8831/anarchy1.gif">
-			<img src="/assets/8831/anythingbutchrome.gif">
 			<img src="/assets/8831/aolim.gif">
+				<img src="/assets/8831/chrmevil.gif">
+
 			<img src="/assets/8831/atarilogo.gif">
-			<img src="/assets/8831/bantt.gif">
-			<img src="/assets/8831/chill_pill.gif">
-			<img src="/assets/8831/chrmevil.gif">
+		<img src="/assets/8831/hsajesusveg.gif">
+
 <img src="/assets/8831/copy_floppy.gif">
-	<img src="/assets/8831/discord2.gif">
-	<img src="/assets/8831/firefoxget.gif">
+	
+			<img src="/assets/8831/aladdinsane.png">
+
 	<img src="/assets/8831/fspeech.gif">
+		<img src="/assets/8831/ieburnbtn.gif">
+
 	<img src="/assets/8831/halloween1.gif">
-	<img src="/assets/8831/hsajesusveg.gif">
+			<img src="/assets/8831/firefoxget.gif">
 	<img src="/assets/8831/ieburnbtn.gif">
 	<img src="/assets/8831/ienuke.gif">
 	<img src="/assets/8831/peace.gif">
-	<img src="/assets/8831/steam.gif">
-	<img src="/assets/8831/twig.gif">
+				<img src="/assets/8831/chill_pill.gif">
+
+	<!--<img src="/assets/8831/twig.gif">-->
 		<img src="/assets/8831/wikipedia.gif">
 		<img src="/assets/8831/aladdinsane.png">
+				<img src="/assets/8831/bantt.gif">
+
+				<img src="/assets/8831/anythingbutchrome.gif">
+
 		<img src="/assets/8831/blm.png">
 
+	<img src="/assets/8831/steam.gif">
+<img src="/assets/8831/discord2.gif">
 	
 	
 			</div>
