--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -27,7 +27,7 @@ background-image: url("water.gif");
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   <h3>Web demo</h3>
-  			
+  <i>Note: text-to-speech time readings may not work on mobile.</i>
   
   <select id="demoVersionSelect">
   <option value="1.0.1" selected>v1.0.1</option>
