--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@ I8,      ,8'
 					</ul>
 				</div>
 			</div>
-			<div style="background:white;width:30%;">
+<!--			
+<div style="background:white;width:30%;">
 				<ul>
 					<li>
 						<a href="http://www.trystancraft.com/martha/notes/teen.html">gothic martha stewart for teens</a>
@@ -331,7 +332,7 @@ I8,      ,8'
 		
 		</tr>
 	</table>
-</div>
+</div> -->
 
 
 		</body>
