--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@ I8,      ,8'
 		<ul>
 	
 			<li><a href="https://www.goodreads.com/user/show/153388050-james-u">goodreads</a></li>
+			<li><a href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></li>
+
 		</ul>
 		<h5 class="sectionHeader">~contact~</h5>
 		<img src="/assets/emailmegif.gif" style="width:80px">
