--- a/cecilarchive/dashboard.html
+++ b/cecilarchive/dashboard.html
@@ -155,7 +155,7 @@ while($result = $query->fetch_assoc()) {
 ?>
 -->
 </div>
-
+	</div>
 
 
 <div class="container container-primary">
@@ -171,7 +171,7 @@ while($result = $query->fetch_assoc()) {
 </div>
 
 
-
+<!--
 <div id="contribute" class="nicediv">
 <h3 style="margin:0;padding:0;">Transcribe</h3>
 <small>Here are some untranscribed documents:</small>
@@ -198,6 +198,7 @@ echo "No letters written on this day.";
 }
 ?> -->
 </div>
+	-->
 
 
 
