--- a/cecilarchive/dashboard.html
+++ b/cecilarchive/dashboard.html
@@ -103,7 +103,7 @@ li > a{
 		<!--<img src="graphics/logo.png" style="border:5px inset white;width:300px;">-->
 		<h1 style="margin-top:0">Lester LeFevre Cecil Letter Archive <span style="letter-spacing:2px;font-size:12px;color:darkgreen;">BETA</span></h1>
 		<h4 style="margin-bottom:0"><i>An initiative to scan, transcribe, and preserve the writings and correspondances of Judge Lester LeFevre Cecil</i></h4>
-		<small><i><a href="about.html">more about the project</a></i></small>
+		<!-- <small><i><a href="about.html">more about the project</a></i></small> -->
 <hr>
 <h3>Welcome, </h3>
 <ul>
