--- a/cecilarchive/browse.html
+++ b/cecilarchive/browse.html
@@ -99,7 +99,7 @@ padding:2px;
 <table border="1">
 	<thead>
 		<tr id="rowtop11">
-			<th colspan="7" style="padding:10px;background:silver;"><h1 style="margin:0;font-size:1.25em;">browse</h1><small style="margin:0;font-size:10px"><a href="dashboard.php">back to dashboard</a></small></th>
+			<th colspan="7" style="padding:10px;background:silver;"><h1 style="margin:0;font-size:1.25em;">browse</h1><small style="margin:0;font-size:10px"><a href="dashboard.html">back to dashboard</a></small></th>
 		</tr>
 		<tr>
 			<th data-class-name="priority">date</th>
