--- a/cecilarchive/upload.html
+++ b/cecilarchive/upload.html
@@ -102,8 +102,7 @@ width:100%;
 	</head>
 	<body>
 		<h2>Upload</h2>
-		<h4>ONLY JAMES IS ALLOWED TO UPLOAD FILES</h4>
-		<small><a href="dashboard.php">dashboard</a> | <a href="browse.php">browse</a></small><br>
+		<small><a href="dashboard.html">dashboard</a> | <a href="browse.html">browse</a></small><br>
 		<form id="uploadform" method="post" enctype="multipart/form-data">
 		<input type="hidden" name="action" value="upload">
 		<table>
