--- a/cecilarchive/dashboard.html
+++ b/cecilarchive/dashboard.html
@@ -183,7 +183,7 @@ echo "<li><a href='transcribe.html?id=" . $resultunt["publicid"] . "'>" . $resul
 }
 ?>-->
 </ul>
-<small>See more at the <a href="browse.html">browse</a> page.</small>
+<!--<small>See more at the <a href="browse.html">browse</a> page.</small>-->
 </div>
 <div id='onthisday' class="nicediv">
 <h3 style="margin:0;padding:0;">On This Day</h3>
