--- a/cecilarchive/christmas.html
+++ b/cecilarchive/christmas.html
@@ -22,7 +22,8 @@ color:white;
 <img src="Christmas1918.jpeg" width="1px" style="display:block">
 <img src="graphics/fireplace.gif" width="250px" style="">
 <h1><span><img src="graphics/christmastree.gif" width="50px" style="vertical-align:middle"></span>Merry Christmas!<span><img src="graphics/christmastree.gif" width="50px" style="vertical-align:middle"></span></h1>
-<h3>Check out this letter from Earl Cecil to his brother Lester dated December 29, 1918:</h3>
+  <h5><i>Dec. 2018</i></h5>
+  <h3>Check out this letter from Earl Cecil to his brother Lester dated December 29, 1918:</h3>
 <img src="Christmas1918.jpeg" width="350px">
 <h4><a href="view.html?id=c7592ab0" style="color:white">See the file page for a transcript.</a></h4>
 <script src="snowstorm.js"></script>
