--- a/cecilarchive/index.html
+++ b/cecilarchive/index.html
@@ -1,11 +1,9 @@
 <div style="background:gray;margin:25px;border:5px solid black;">
-	<h3>This project, started in 2018, has been discontinued. The site is available here for archival purposes, but scanned letters are not accessible.</h3>
+	<h3>This project was started in 2018 and has since been discontinued. The site available here is for archival purposes, and scanned letters and transcriptions are not accessible. Most pages will not be functional.</h3>
+	<a href="/">return to jamesunderwood.net</a>
 	<ul>
 		<li><a href="/cecilarchive">view home page</a></li>
 		<li><a href="/cecilarchive/dashboard.html">view dashboard</a></li>
-		<li><a href="/cecilarchive">view home page</a></li>
-
-
 	</ul>
 	
 </div>
