--- a/cecilarchive/dashboard.html
+++ b/cecilarchive/dashboard.html
@@ -1,3 +1,13 @@
+<div style="background:gray;margin:25px;border:5px solid black;padding:10px;">
+	<h3>This project was started in 2018 and has since been discontinued. The site available here is for archival purposes, and scanned letters and transcriptions are not accessible. Most pages will not be functional.</h3>
+	<ul>
+		<li><a href="/cecilarchive">view home page</a></li>
+		<li><a href="/cecilarchive/dashboard.html">view dashboard</a></li>
+		<li><small><a href="/">or, return to jamesunderwood.net</a></small></li>
+	</ul>
+	
+</div>
+
 <!--
 <?php
 session_start();
