--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ I8,      ,8'
 		<li><a target="_BLANK" href="/old/campaign2/">campaign website 3</a> <span class="smoldate">5/2021</span></li>
 	<li><a href="cgol">Conway's Game of Life</a> <span class="smoldate">2018</span></li>
 	<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software</a> <span class="smoldate">2018</span></li>
-	<li><a href="#">cecil letter archive project</a> <span class="smoldate">2018</span></li>
+	<li><a href="/cecilarchive">cecil letter archive project</a> <span class="smoldate">2018</span></li>
 	<li><a href="/50states.html">50 states game</a> <span class="smoldate">2018</span></li>
 
 
