--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ I8,      ,8'
 						<span class="smoldate">7/15/2022</span>
 					</li>
 					<li>
-						<span class="latestTag">Misc.</span>
+						<span class="latestTag">Comp sci</span>
 						<a href="/autoannouncer">AutoAnnouncer v1.0.1</a>
 						<span class="smoldate">7/1/2022</span>
 					</li>
