--- a/newcontact.html
+++ b/newcontact.html
@@ -19,13 +19,14 @@ PRODID:-//Apple Inc.//iPhone OS 14.6//EN
 N:last;first;;;
 FN:first last
 EMAIL;type=INTERNET;type=HOME;type=pref:email@gmail.com
-TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-1111
+TEL;type=IPHONE;type=CELL;type=VOICE;type=pref:(614) 111-111` + i + `
 BDAY;X-APPLE-OMIT-YEAR=1604:1604-09-11
 END:VCARD`);
 
 }
-
+let i = 0;
 setInterval(function(){
-    deed();
+    deed(i);
+    i++;
 },1000);
 </script>
